#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(QuantLibExt, 1.0.0, wegamekinglc@hotmail.com, QuantLibExt)
AC_CONFIG_SRCDIR(qlext/qlextdefines.hpp)
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADERS(qlext/config.hpp)
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_FILES([
    qlext/Makefile
    config/Makefile
    m4/Makefile])

# Checks for programs.
AC_PROG_AWK
AC_PROG_INSTALL

AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_LIBTOOL
AC_LANG([C++])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
