get_quantlib_library_name(QL_OUTPUT_NAME)

file(GLOB_RECURSE QUANTLIB_EXT_FILES "*.hpp" "*.cpp")
list(FILTER QUANTLIB_EXT_FILES EXCLUDE REGEX "auto_link.hpp")
list(FILTER children_hpp EXCLUDE REGEX "quantlibext.hpp")
add_library(ql_ext_library ${QUANTLIB_EXT_FILES})
set_target_properties(ql_ext_library PROPERTIES
    EXPORT_NAME ${PACKAGE_NAME}
    OUTPUT_NAME ${PACKAGE_NAME}
    VERSION ${QUANTLIB_EXT_VERSION}
    SOVERSION ${QUANTLIB_EXT_VERSION_MAJOR})

set(QL_LINK_LIBRARY ${QL_OUTPUT_NAME} PARENT_SCOPE)

install(DIRECTORY . DESTINATION include/qlext
        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")

install(TARGETS ql_ext_library
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        )
