add_executable(CTBZeroBond CTBZeroBond.cpp)
target_link_libraries(CTBZeroBond QuantLibExt)

if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    if(NOT CMAKE_CL_64)
        target_link_libraries(CTBZeroBond QuantLib-vc140-mt-gd)
    else()
        target_link_libraries(CTBZeroBond QuantLib-vc140-x64-mt-gd)
    endif()
elseif(${CMAKE_BUILD_TYPE} STREQUAL "Release")
    if(NOT CMAKE_CL_64)
        target_link_libraries(CTBZeroBond QuantLib-vc140-mt)
    else()
        target_link_libraries(CTBZeroBond QuantLib-vc140-x64-mt)
    endif()
endif()

