AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}

dist_data_DATA = 

SUBDIRS =

noinst_LTLIBRARIES = libCashflows.la

libCashflows_la_SOURCES = \
    couponpricer.cpp \
	subperiodscoupon.cpp \
	subperiodscouponpricer.cpp

this_includedir=${includedir}/${subdir}
this_include_HEADERS =  \
    couponpricer.hpp \
	subperiodscoupon.hpp \
	subperiodscouponpricer.hpp

